docs: Prepare for new update (v1.1.0)
This commit prepares the project for the v1.1.0 release by:

- Updating `pubspec.yaml` with the new version and an improved description.
- Updating `CHANGELOG.md` with a detailed summary of changes for v1.1.0.
- Updating `README.md` to reflect all new features, API changes, and updated examples.
- Resolving all linting issues to ensure code quality.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: json_builder_pro
-description: A powerful and intuitive library for building and manipulating JSON structures in Dart.
-version: 1.0.4
+version: 1.1.0
+description: A powerful and intuitive Dart package for programmatically building, manipulating, and parsing JSON structures using a tree-based, object-oriented approach.
 homepage: https://github.com/Ashraf-Hamdoun/JSON-Builder-Pro
 repository: https://github.com/Ashraf-Hamdoun/JSON-Builder-Pro.git
 issue_tracker: https://github.com/Ashraf-Hamdoun/JSON-Builder-Pro/issues
